Move register form errors next to form - misalignment issues

--- a/static/website/styles.css
+++ b/static/website/styles.css
@@ -166,7 +166,7 @@
       color: #000;
   }
   .register {
-      height: 800px;
+      height: 1400px;
       width: auto;
       color: #000;
   }
